# netscope

./: .gitignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md  UNTESTED.md  edu_append.txt  gen_appends.ps1  insert_reg.ps1  reg_append.txt  reg_code_clean.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/core/: Cargo.toml
crates/core/benches/: filter_match.rs  mem_usage.rs  parse_throughput.rs
crates/core/benches/common/: mod.rs
crates/core/src/: api_server.rs  capture.rs  config.rs  crypto.rs  db.rs  discover.rs  dissectors.rs  editcap.rs  education.rs  expert.rs  filter.rs  firewall.rs  flows.rs  forensics.rs  formats.rs  gen.ps1  lib.rs  models.rs  names.rs  pcapng.rs  pipeline.rs  plugins.rs  registry.rs  remote.rs  rotate.rs  siem.rs  stats.rs  stream.rs  threat.rs
crates/core/src/dissectors/: a21.rs  aarp.rs  aastra_aasp.rs  acap.rs  acdr.rs  acn.rs  acp133.rs  acr122.rs  acse.rs  activitypub.rs  actrace.rs  adb.rs  adb_cs.rs  adb_service.rs  ads.rs  adsb.rs  adwin.rs  adwin_config.rs  aeron.rs  aerospike.rs  aes67.rs  afp.rs  afs.rs  agentx.rs  aim.rs  ain.rs  ajp13.rs  akp.rs  alcap.rs  alljoyn.rs  alp.rs  amp.rs  amqp.rs  amqp1.rs  amr.rs  amt.rs  amx_icsp.rs  ancp.rs  ans.rs  ansi_637.rs  (+1795 more)
crates/python/: Cargo.toml
crates/python/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  colors.rs  columns.rs  detail.rs  headless.rs  insights.rs  main.rs  setup.rs  stream.rs  theme.rs  ui.rs
crates/tui/src/views/: connections.rs  dashboard.rs  dns_log.rs  insights.rs  learn.rs  mod.rs  packets.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
desktop/frontend/: app.js  filter.js  i18n.js  index.html  styles.css
desktop/frontend-tests/: analysis.test.js  eviction.test.js  fieldranges.test.js  filter.test.js  load-app.js  menu.test.js  package-lock.json  package.json  virtualscroll.test.js
desktop/frontend/modules/: api.js  fingerprint.js  oui.js  wifi.js
desktop/frontend/modules/views/: packets.js  voip.js
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: KULLANIM.md  PROTOKOL-GENISLETME.md  README.md  architecture.md  ci-cd.md  core.md  desktop.md  dissectors.md  eksik-protokoller.md  faq.md  filters.md  netscope-gelecek-protokolleri.md  netscope-ozel-protokoller.md  setup.md  tui.md  wireshark-karsilastirma.md
tools/gen-fixtures/: Cargo.toml
tools/gen-fixtures/src/: main.rs
