[package]
name = "netscope-core"
description = "Capture engine, protocol dissectors, stats and passive name resolution powering netscope."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pcap = "2"
etherparse = "0.16"
crossbeam-channel = "0.5"
anyhow = "1"
chrono = "0.4"
dns-parser = "0.8"
