[package]
name = "netscope-core"
description = "Capture engine, protocol dissectors, stats and passive name resolution powering netscope."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pcap = "2"
etherparse = "0.16"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
anyhow = "1"
bytes = "1"
chrono = "0.4"
dns-parser = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
memmap2 = "0.9"
memchr = "2"
rayon = "1"
tokio = { version = "1", features = ["rt", "sync"], optional = true }
# Capture encryption (ROADMAP §5.4) and TLS-inspection CA foundation (§5.1).
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.2"
sha2 = "0.10"
md-5 = "0.10"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
rsa = "0.9"
sha1 = "0.10"
ccm = "0.5"
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }

[features]
# Async facade over the capture pipeline (see `capture::AsyncCaptureEngine`).
# Off by default so the TUI/desktop builds stay tokio-free.
async = ["dep:tokio"]

[dev-dependencies]
criterion = "0.5"
# Same versions as [dependencies] — used by the benches to build test frames
# and Packet values through the public API.
etherparse = "0.16"
chrono = "0.4"
rand = "0.8"

# Continuous benchmarks (ROADMAP §4.4) — see benches/ and docs/core.md.
[[bench]]
name = "parse_throughput"
harness = false

[[bench]]
name = "filter_match"
harness = false

[[bench]]
name = "mem_usage"
harness = false
