[package]
name = "netscope-tui"
description = "netscope — a fast, human-readable terminal UI for live network capture and analysis. A friendly alternative to Wireshark."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
crossbeam-channel = "0.5"
chrono = "0.4"
netscope-core = { path = "../core", version = "0.1.0" }
