[package]
name = "netscope-tui"
description = "netscope — a fast, human-readable terminal UI for live network capture and analysis. A friendly alternative to Wireshark."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rpassword = "7.3"
crossbeam-channel = "0.5"
chrono = "0.4"
# The `version` is what crates.io would resolve against on publish; the `path`
# is what builds here. It must be bumped in step with [workspace.package]
# version or the workspace stops building — the other crates that depend on
# netscope-core omit it for exactly that reason.
netscope-core = { path = "../core", version = "0.2.0" }

[dev-dependencies]
# Frame-byte fixtures in the detail-tree / stream / insights unit tests build
# `Packet.data`, which is a `bytes::Bytes`.
bytes = "1"

[lints]
workspace = true
