[package]
name = "netscope-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["wasmbind"] }
bytes = "1"
getrandom = { version = "0.2", features = ["js"] }
netscope-core = { path = "../core" }

[lints]
workspace = true
