[package]
name = "netscope-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "netscope_desktop_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
maxminddb = "0.24"
netscope-core = { path = "../../crates/core" }
